# agents-packages

./: AGENTS.md  README.md
.codex/modes/: AUDITOR.md  CODER.md  MANAGER.md  REVIEWER.md  SWARMMANAGER.md  TASKMASTER.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feedback.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/agents/: auditor.md  coder.md  mode-picker.md  worker.md  (+1 more)
logger/: README.md  pyproject.toml
logger/midori_ai_logger/: __init__.py  config.py  enums.py  logger.py
midori-ai-agent-base/: README.md  docs.md  pyproject.toml
midori-ai-agent-base/midori_ai_agent_base/: __init__.py  config.py  factory.py  models.py  parsing.py  protocol.py
midori-ai-agent-base/tests/: test_config.py  test_factory.py  test_parsing.py  test_protocol.py
midori-ai-agent-context-manager/: README.md  docs.md  pyproject.toml
midori-ai-agent-context-manager/midori_ai_agent_context_manager/: __init__.py  compressor.py  models.py  store.py
midori-ai-agent-context-manager/tests/: test_compressor.py  test_models.py  test_store.py
midori-ai-agent-huggingface/: README.md  docs.md  pyproject.toml
midori-ai-agent-huggingface/midori_ai_agent_huggingface/: __init__.py  adapter.py  config.py  pipeline_manager.py
midori-ai-agent-huggingface/tests/: test_adapter.py
midori-ai-agent-langchain/: README.md  docs.md  pyproject.toml
midori-ai-agent-langchain/midori_ai_agent_langchain/: __init__.py  adapter.py
midori-ai-agent-langchain/tests/: test_adapter.py
midori-ai-agent-openai/: README.md  docs.md  pyproject.toml
midori-ai-agent-openai/midori_ai_agent_openai/: __init__.py  adapter.py  session.py
midori-ai-agent-openai/tests/: test_adapter.py
midori-ai-agents-all/: README.md  docs.md  pyproject.toml
midori-ai-agents-all/midori_ai_agents_all/: __init__.py  docs_registry.py  version.py
midori-ai-agents-all/tests/: test_docs_registry.py
midori-ai-agents-demo/: DEMO_GUIDE.md  README.md  docs.md  pyproject.toml
midori-ai-agents-demo/examples/: __init__.py  custom_stage.py  full_lrm_pipeline.py  local_setup.py  parallel_processing.py  simple_pipeline.py
midori-ai-agents-demo/midori_ai_agents_demo/: __init__.py  config.py  enums.py  models.py  pipeline.py
midori-ai-agents-demo/midori_ai_agents_demo/caching/: __init__.py  base.py  memory_cache.py
midori-ai-agents-demo/midori_ai_agents_demo/observability/: __init__.py  metrics.py  tracer.py
midori-ai-agents-demo/midori_ai_agents_demo/stages/: __init__.py  base.py  compaction.py  final_response.py  preprocessing.py  reranking.py  working_awareness.py
midori-ai-agents-demo/tests/: __init__.py  test_caching.py  test_pipeline.py  test_stages.py
midori-ai-compactor/: README.md  docs.md  pyproject.toml
midori-ai-compactor/midori_ai_compactor/: __init__.py  compactor.py  config.py  prompts.py
midori-ai-compactor/tests/: test_compactor.py
midori-ai-context-bridge/: README.md  docs.md  pyproject.toml
midori-ai-context-bridge/midori_ai_context_bridge/: __init__.py  bridge.py  compressor.py  config.py  corruption.py
midori-ai-context-bridge/midori_ai_context_bridge/storage/: __init__.py  reasoning_entry.py  vector_storage.py
midori-ai-context-bridge/tests/: test_bridge.py
midori-ai-media-lifecycle/: README.md  docs.md  pyproject.toml
midori-ai-media-lifecycle/midori_ai_media_lifecycle/: __init__.py  decay.py  lifecycle.py  scheduler.py
midori-ai-media-lifecycle/tests/: test_decay.py  test_lifecycle.py
midori-ai-media-request/: README.md  docs.md  pyproject.toml
midori-ai-media-request/midori_ai_media_request/: __init__.py  handler.py  models.py  protocol.py
midori-ai-media-request/tests/: test_handler.py  test_models.py
midori-ai-media-vault/: README.md  docs.md  pyproject.toml
midori-ai-media-vault/midori_ai_media_vault/: __init__.py  crypto.py  models.py  storage.py  system_crypto.py
midori-ai-media-vault/tests/: test_crypto.py  test_models.py  test_storage.py  test_system_crypto.py
midori-ai-mood-engine/: README.md  docs.md  pyproject.toml
midori-ai-mood-engine/midori_ai_mood_engine/: __init__.py  config.py  engine.py  enums.py  impact.py  mood_modifiers.py  persistence.py  profile.py  training.py
midori-ai-mood-engine/midori_ai_mood_engine/energy/: __init__.py  circadian.py  expenditure.py  recovery.py  tracker.py
midori-ai-mood-engine/midori_ai_mood_engine/hormones/: __init__.py  cycle_model.py
midori-ai-mood-engine/midori_ai_mood_engine/hormones/metabolism/: __init__.py
midori-ai-mood-engine/midori_ai_mood_engine/hormones/mood/: __init__.py
midori-ai-mood-engine/midori_ai_mood_engine/hormones/reproductive/: __init__.py
midori-ai-mood-engine/midori_ai_mood_engine/hormones/stress/: __init__.py
midori-ai-mood-engine/midori_ai_mood_engine/loneliness/: __init__.py  influence.py  social_need.py  tracker.py
midori-ai-mood-engine/tests/: __init__.py  test_engine.py  test_impact_system.py  test_training.py
midori-ai-mood-engine/tests/energy/: __init__.py  test_energy.py
midori-ai-mood-engine/tests/hormones/: __init__.py  test_hormones.py
midori-ai-mood-engine/tests/loneliness/: __init__.py  test_loneliness.py
midori-ai-reranker/: README.md  docs.md  pyproject.toml
midori-ai-reranker/midori_ai_reranker/: __init__.py  config.py  pipeline.py
midori-ai-reranker/midori_ai_reranker/backends/: __init__.py  local.py
midori-ai-reranker/midori_ai_reranker/embeddings/: __init__.py  providers.py
midori-ai-reranker/midori_ai_reranker/filters/: __init__.py  llm_rerank.py  redundant.py  relevance.py
midori-ai-reranker/tests/: test_reranker.py
midori-ai-vector-manager/: README.md  docs.md  pyproject.toml
midori-ai-vector-manager/midori_ai_vector_manager/: __init__.py  config.py  embeddings.py  enums.py  models.py  protocol.py
midori-ai-vector-manager/midori_ai_vector_manager/backends/: __init__.py  chromadb.py  lancedb.py
midori-ai-vector-manager/tests/: test_vector_store.py
state-reporter/: README.md  pyproject.toml
state-reporter/state_reporter/: __init__.py  config.py  enums.py  models.py  reporter.py
state-reporter/tests/: test_reporter.py
(+1 files in other folders)
