[project]
name = "midori-ai-logger"
version = "0.1.0"
description = "Logging library for Midori AI services"
authors = [{ name = "Midori AI" }]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "rich>=14.0.0",
    "tomli>=2.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midori_ai_logger"]
