[project]
name = "midori-ai-agent-base"
version = "0.1.0"
description = "Common protocol and data models for Midori AI agent backends"
authors = [{ name = "Midori AI" }]
requires-python = ">=3.11,<3.15"
dependencies = [
    "midori_ai_logger",
    "midori-ai-agent-langchain",
    "midori-ai-agent-context-manager",
    "midori-ai-agent-openai",
]

[tool.uv.sources]
midori_ai_logger = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "logger" }
midori-ai-agent-langchain = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-agent-langchain" }
midori-ai-agent-context-manager = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-agent-context-manager" }
midori-ai-agent-openai = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-agent-openai" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midori_ai_agent_base"]
