[project]
name = "midori-ai-agent-context-manager"
version = "0.1.0"
description = "Context management for Midori AI agent backends with Pydantic persistence"
authors = [{ name = "Midori AI" }]
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydantic>=2.0.0",
    "aiofiles>=24.1.0",
    "tiktoken>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.14.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midori_ai_agent_context_manager"]
