[project]
name = "midori-ai-agent-huggingface"
version = "0.1.0"
description = "Hugging Face local inference implementation of the Midori AI agent protocol"
authors = [{ name = "Midori AI" }]
requires-python = ">=3.11,<3.15"
dependencies = [
    "midori-ai-agent-base",
    "midori_ai_logger",
    "accelerate>=0.26.0",
    "transformers",
]

[tool.uv.sources]
midori_ai_logger = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "logger" }
midori-ai-agent-base = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-agent-base" }
transformers = { git = "https://github.com/huggingface/transformers" }

[project.optional-dependencies]
torch = ["torch>=2.0.0"]
quantization = ["bitsandbytes>=0.41.0"]
all = ["torch>=2.0.0", "bitsandbytes>=0.41.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.14.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midori_ai_agent_huggingface"]
