[project]
name = "midori-ai-agent-langchain"
version = "0.1.0"
description = "Langchain implementation of the Midori AI agent protocol"
authors = [{ name = "Midori AI" }]
requires-python = ">=3.11,<3.15"
dependencies = [
    "langchain-core>=0.3.65",
    "langchain-openai>=0.3.24",
    "midori-ai-agent-base",
    "midori_ai_logger",
]

[tool.uv.sources]
midori_ai_logger = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "logger" }
midori-ai-agent-base = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-agent-base" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midori_ai_agent_langchain"]
