[project]
name = "midori-ai-agent-openai"
version = "0.1.0"
description = "OpenAI Agents SDK implementation of the Midori AI agent protocol"
authors = [{ name = "Midori AI" }]
requires-python = "~=3.13.0"
dependencies = [
    "openai>=1.88.0",
    "openai-agents>=0.3.3",
    "midori-ai-agent-base",
    "midori_ai_logger",
]

[tool.uv.sources]
midori_ai_logger = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "logger" }
midori-ai-agent-base = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-agent-base" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midori_ai_agent_openai"]
