[project]
name = "midori-ai-agents-demo"
version = "0.1.0"
description = "Demo showcase of complete LRM pipeline integrating all Midori AI packages"
authors = [{ name = "Midori AI" }]
requires-python = ">=3.11,<3.15"
dependencies = [
    "midori_ai_logger",
    "midori-ai-agent-base",
    "midori-ai-agent-langchain",
    "midori-ai-agent-openai",
    "midori-ai-agent-huggingface",
    "midori-ai-context-bridge",
    "midori-ai-compactor",
    "midori-ai-vector-manager",
    "midori-ai-reranker",
    "pydantic>=2.0.0",
]

[tool.uv.sources]
midori_ai_logger = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "logger" }
midori-ai-agent-base = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-agent-base" }
midori-ai-agent-langchain = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-agent-langchain" }
midori-ai-agent-openai = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-agent-openai" }
midori-ai-agent-huggingface = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-agent-huggingface" }
midori-ai-context-bridge = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-context-bridge" }
midori-ai-compactor = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-compactor" }
midori-ai-vector-manager = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-vector-manager" }
midori-ai-reranker = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-reranker" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.14.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midori_ai_agents_demo"]
