[project]
name = "midori-ai-compactor"
version = "0.1.0"
description = "Flexible consolidation of multi-model reasoning outputs using agents"
authors = [{ name = "Midori AI" }]
requires-python = "~=3.13.0"
dependencies = [
    "midori_ai_logger",
    "midori-ai-agent-base",
]

[tool.uv.sources]
midori_ai_logger = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "logger" }
midori-ai-agent-base = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-agent-base" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midori_ai_compactor"]
