[project]
name = "midori-ai-context-bridge"
version = "0.1.0"
description = "Persistent thinking cache with ChromaDB storage and time-based memory decay"
authors = [{ name = "Midori AI" }]
requires-python = ">=3.11,<3.15"
dependencies = [
    "midori_ai_logger",
    "midori_ai_vector_manager",
    "pydantic>=2.0.0",
]

[tool.uv.sources]
midori_ai_logger = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "logger" }
midori_ai_vector_manager = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-vector-manager" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.14.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midori_ai_context_bridge"]
