[project]
name = "midori-ai-media-lifecycle"
version = "0.1.0"
description = "Time-based lifecycle management for media objects with decay and cleanup"
authors = [{ name = "Midori AI" }]
requires-python = ">=3.11,<3.15"
dependencies = [
    "midori_ai_logger",
    "midori-ai-media-vault",
]

[tool.uv.sources]
midori_ai_logger = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "logger" }
midori-ai-media-vault = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-media-vault" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midori_ai_media_lifecycle"]
