[project]
name = "midori-ai-media-request"
version = "0.1.0"
description = "Type-safe request/response protocol for media parsing in agent systems"
authors = [{ name = "Midori AI" }]
requires-python = "~=3.13.0"
dependencies = [
    "pydantic>=2.0.0",
    "midori-ai-media-vault",
    "midori-ai-media-lifecycle",
]

[tool.uv.sources]
midori-ai-media-vault = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-media-vault" }
midori-ai-media-lifecycle = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-media-lifecycle" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.14.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midori_ai_media_request"]
