[project]
name = "midori-ai-media-vault"
version = "0.1.0"
description = "Encrypted media storage with Pydantic models for agent systems"
authors = [{ name = "Midori AI" }]
requires-python = "~=3.13.0"
dependencies = [
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "psutil>=5.9.0",
    "midori_ai_logger",
]

[tool.uv.sources]
midori_ai_logger = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "logger" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.14.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midori_ai_media_vault"]
