[project]
name = "midori-ai-mood-engine"
version = "0.1.0"
description = "Comprehensive mood engine with hormone simulation, loneliness tracking, and energy modeling"
authors = [{ name = "Midori AI" }]
requires-python = "~=3.13.0"
dependencies = [
    "midori_ai_logger",
    "midori-ai-media-vault",
    "torch>=2.0.0",
    "pytz>=2024.1",
]

[tool.uv.sources]
midori_ai_logger = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "logger" }
midori-ai-media-vault = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "midori-ai-media-vault" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midori_ai_mood_engine"]
