[project]
name = "midori-ai-vector-manager"
version = "0.1.0"
description = "Reusable vector storage with ChromaDB backend for Midori AI packages"
authors = [{ name = "Midori AI" }]
requires-python = ">=3.11,<3.15"
dependencies = [
    "chromadb>=0.4.0",
    "pydantic>=2.0.0",
    "midori_ai_logger",
    "lancedb>=0.1.0",
    "pyarrow>=14.0.0",
]

[tool.uv.sources]
midori_ai_logger = { git = "https://github.com/Midori-AI-OSS/agents-packages", subdirectory = "logger" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.14.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midori_ai_vector_manager"]
