[project]
name = "state-reporter"
version = "0.1.0"
description = "State reporting library for Midori AI services"
authors = [{ name = "Midori AI" }]
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "tomli>=2.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["state_reporter"]
